Add preloader on course-list page

--- a/src/app/components/course-list/course-list.component.html
+++ b/src/app/components/course-list/course-list.component.html
@@ -1,31 +1,32 @@
-<h1>Courses</h1>
-<div *ngFor='let course of pageSlice'>
-    <div class='card'>    
-        <img class="card-img" [src]="course.previewImageLink + '/cover.webp'">  
-        <div class='card-title'>
-            <a [routerLink]="[ '/course', course.id]">
-                {{ course.title }}
-            </a>
-        </div>     
-        <div class='card-sub'>
-            {{ course.description }}
-        </div>
-        <div>
-            <p>Rate: {{ course.rating }}</p>
-            <p>Lessons: {{ course.lessonsCount }}</p>
-            <ul>
-                <li *ngFor='let skill of course.meta.skills'>
-                    {{ skill }}
-                </li>
-            </ul>
+<div *ngIf="isLoading">
+    <mat-spinner></mat-spinner>
+</div>
+<div *ngIf="!isLoading">
+    <h1>Courses</h1>
+    <div *ngFor='let course of pageSlice'>
+        <div class='card'>
+            <img class="card-img" [src]="course.previewImageLink + '/cover.webp'">
+            <div class='card-title'>
+                <a [routerLink]="[ '/course', course.id]">
+                    {{ course.title }}
+                </a>
+            </div>
+            <div class='card-sub'>
+                {{ course.description }}
+            </div>
+            <div>
+                <p>Rate: {{ course.rating }}</p>
+                <p>Lessons: {{ course.lessonsCount }}</p>
+                <ul>
+                    <li *ngFor='let skill of course.meta.skills'>
+                        {{ skill }}
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+    <mat-paginator [length]="courses.length" [pageSize]="10" (page)="onPageChange($event)" showFirstLastButtons
+        hidePageSize>
+    </mat-paginator>
 </div>
-<mat-paginator
-    [length]="courses.length"
-    [pageSize]="10"
-    (page) = "onPageChange($event)"
-    showFirstLastButtons
-    hidePageSize
->
-</mat-paginator>
+
